src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__an.snap
---
source: kcl/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "end": 35,
      "expression": {
        "arguments": [
          {
            "end": 34,
            "properties": [
              {
                "end": 19,
                "key": {
                  "end": 11,
                  "name": "to",
                  "start": 9,
                  "type": "Identifier"
                },
                "start": 9,
                "type": "ObjectProperty",
                "value": {
                  "elements": [
                    {
                      "end": 15,
                      "raw": "0",
                      "start": 14,
                      "type": "Literal",
                      "type": "Literal",
                      "value": {
                        "value": 0.0,
                        "suffix": "None"
                      }
                    },
                    {
                      "end": 18,
                      "raw": "1",
                      "start": 17,
                      "type": "Literal",
                      "type": "Literal",
                      "value": {
                        "value": 1.0,
                        "suffix": "None"
                      }
                    }
                  ],
                  "end": 19,
                  "start": 13,
                  "type": "ArrayExpression",
                  "type": "ArrayExpression"
                }
              },
              {
                "end": 33,
                "key": {
                  "end": 25,
                  "name": "from",
                  "start": 21,
                  "type": "Identifier"
                },
                "start": 21,
                "type": "ObjectProperty",
                "value": {
                  "elements": [
                    {
                      "end": 29,
                      "raw": "3",
                      "start": 28,
                      "type": "Literal",
                      "type": "Literal",
                      "value": {
                        "value": 3.0,
                        "suffix": "None"
                      }
                    },
                    {
                      "end": 32,
                      "raw": "3",
                      "start": 31,
                      "type": "Literal",
                      "type": "Literal",
                      "value": {
                        "value": 3.0,
                        "suffix": "None"
                      }
                    }
                  ],
                  "end": 33,
                  "start": 27,
                  "type": "ArrayExpression",
                  "type": "ArrayExpression"
                }
              }
            ],
            "start": 7,
            "type": "ObjectExpression",
            "type": "ObjectExpression"
          }
        ],
        "callee": {
          "end": 6,
          "name": "lineTo",
          "start": 0,
          "type": "Identifier"
        },
        "end": 35,
        "start": 0,
        "type": "CallExpression",
        "type": "CallExpression"
      },
      "start": 0,
      "type": "ExpressionStatement",
      "type": "ExpressionStatement"
    }
  ],
  "end": 35,
  "start": 0
}
