src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__ap.snap
---
source: kcl/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "declaration": {
        "end": 37,
        "id": {
          "end": 14,
          "name": "mySketch",
          "start": 6,
          "type": "Identifier"
        },
        "init": {
          "arguments": [
            {
              "elements": [
                {
                  "end": 33,
                  "raw": "0",
                  "start": 32,
                  "type": "Literal",
                  "type": "Literal",
                  "value": 0.0
                },
                {
                  "end": 35,
                  "raw": "0",
                  "start": 34,
                  "type": "Literal",
                  "type": "Literal",
                  "value": 0.0
                }
              ],
              "end": 36,
              "start": 31,
              "type": "ArrayExpression",
              "type": "ArrayExpression"
            }
          ],
          "callee": {
            "end": 30,
            "name": "startSketchAt",
            "start": 17,
            "type": "Identifier"
          },
          "end": 37,
          "start": 17,
          "type": "CallExpression",
          "type": "CallExpression"
        },
        "start": 6,
        "type": "VariableDeclarator"
      },
      "end": 37,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 37,
  "start": 0
}
