src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__aq.snap
---
source: kcl/src/parsing/parser.rs
assertion_line: 4002
expression: actual
snapshot_kind: text
---
{
  "body": [
    {
      "end": 28,
      "expression": {
        "arguments": [
          {
            "end": 5,
            "raw": "5",
            "start": 4,
            "type": "Literal",
            "type": "Literal",
            "value": 5.0
          },
          {
            "end": 14,
            "raw": "\"hello\"",
            "start": 7,
            "type": "Literal",
            "type": "Literal",
            "value": "hello"
          },
          {
            "end": 27,
            "name": "aIdentifier",
            "start": 16,
            "type": "Identifier",
            "type": "Identifier"
          }
        ],
        "callee": {
          "end": 3,
          "name": "log",
          "start": 0,
          "type": "Identifier"
        },
        "end": 28,
        "start": 0,
        "type": "CallExpression",
        "type": "CallExpression"
      },
      "start": 0,
      "type": "ExpressionStatement",
      "type": "ExpressionStatement"
    }
  ],
  "end": 28,
  "start": 0
}
