src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__ar.snap
---
source: kcl/src/parsing/parser.rs
assertion_line: 4003
expression: actual
snapshot_kind: text
---
{
  "body": [
    {
      "end": 7,
      "expression": {
        "end": 7,
        "left": {
          "end": 1,
          "raw": "5",
          "start": 0,
          "type": "Literal",
          "type": "Literal",
          "value": 5.0
        },
        "operator": "+",
        "right": {
          "end": 7,
          "raw": "\"a\"",
          "start": 4,
          "type": "Literal",
          "type": "Literal",
          "value": "a"
        },
        "start": 0,
        "type": "BinaryExpression",
        "type": "BinaryExpression"
      },
      "start": 0,
      "type": "ExpressionStatement",
      "type": "ExpressionStatement"
    }
  ],
  "end": 7,
  "start": 0
}
