src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__at.snap
---
source: kcl/src/parsing/parser.rs
assertion_line: 4004
expression: actual
snapshot_kind: text
---
{
  "body": [
    {
      "end": 15,
      "expression": {
        "arguments": [
          {
            "elements": [
              {
                "end": 7,
                "raw": "0",
                "start": 6,
                "type": "Literal",
                "type": "Literal",
                "value": 0.0
              },
              {
                "end": 10,
                "name": "l",
                "start": 9,
                "type": "Identifier",
                "type": "Identifier"
              }
            ],
            "end": 11,
            "start": 5,
            "type": "ArrayExpression",
            "type": "ArrayExpression"
          },
          {
            "end": 14,
            "start": 13,
            "type": "PipeSubstitution",
            "type": "PipeSubstitution"
          }
        ],
        "callee": {
          "end": 4,
          "name": "line",
          "start": 0,
          "type": "Identifier"
        },
        "end": 15,
        "start": 0,
        "type": "CallExpression",
        "type": "CallExpression"
      },
      "start": 0,
      "type": "ExpressionStatement",
      "type": "ExpressionStatement"
    }
  ],
  "end": 15,
  "start": 0
}
