src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__au.snap
---
source: kcl/src/parsing/parser.rs
expression: actual
snapshot_kind: text
---
{
  "body": [
    {
      "declaration": {
        "end": 113,
        "id": {
          "end": 14,
          "name": "cylinder",
          "start": 6,
          "type": "Identifier"
        },
        "init": {
          "body": [
            {
              "arguments": [
                {
                  "end": 35,
                  "raw": "'XY'",
                  "start": 31,
                  "type": "Literal",
                  "type": "Literal",
                  "value": "XY"
                }
              ],
              "callee": {
                "end": 30,
                "name": "startSketchOn",
                "start": 17,
                "type": "Identifier"
              },
              "end": 36,
              "start": 17,
              "type": "CallExpression",
              "type": "CallExpression"
            },
            {
              "arguments": [
                {
                  "end": 81,
                  "properties": [
                    {
                      "end": 67,
                      "key": {
                        "end": 59,
                        "name": "center",
                        "start": 53,
                        "type": "Identifier"
                      },
                      "start": 53,
                      "type": "ObjectProperty",
                      "value": {
                        "elements": [
                          {
                            "end": 63,
                            "raw": "0",
                            "start": 62,
                            "type": "Literal",
                            "type": "Literal",
                            "value": 0.0
                          },
                          {
                            "end": 66,
                            "raw": "0",
                            "start": 65,
                            "type": "Literal",
                            "type": "Literal",
                            "value": 0.0
                          }
                        ],
                        "end": 67,
                        "start": 61,
                        "type": "ArrayExpression",
                        "type": "ArrayExpression"
                      }
                    },
                    {
                      "end": 79,
                      "key": {
                        "end": 75,
                        "name": "radius",
                        "start": 69,
                        "type": "Identifier"
                      },
                      "start": 69,
                      "type": "ObjectProperty",
                      "value": {
                        "end": 79,
                        "raw": "22",
                        "start": 77,
                        "type": "Literal",
                        "type": "Literal",
                        "value": 22.0
                      }
                    }
                  ],
                  "start": 51,
                  "type": "ObjectExpression",
                  "type": "ObjectExpression"
                },
                {
                  "end": 84,
                  "start": 83,
                  "type": "PipeSubstitution",
                  "type": "PipeSubstitution"
                }
              ],
              "callee": {
                "end": 50,
                "name": "circle",
                "start": 44,
                "type": "Identifier"
              },
              "end": 85,
              "start": 44,
              "type": "CallExpression",
              "type": "CallExpression"
            },
            {
              "arguments": [
                {
                  "type": "LabeledArg",
                  "label": {
                    "type": "Identifier",
                    "name": "length"
                  },
                  "arg": {
                    "end": 112,
                    "raw": "14",
                    "start": 110,
                    "type": "Literal",
                    "type": "Literal",
                    "value": 14.0
                  }
                }
              ],
              "callee": {
                "end": 100,
                "name": "extrude",
                "start": 93,
                "type": "Identifier"
              },
              "end": 113,
              "start": 93,
              "type": "CallExpressionKw",
              "type": "CallExpressionKw",
              "unlabeled": null
            }
          ],
          "end": 113,
          "start": 17,
          "type": "PipeExpression",
          "type": "PipeExpression"
        },
        "start": 6,
        "type": "VariableDeclarator"
      },
      "end": 113,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 114,
  "start": 0
}
