src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__av.snap
---
source: kcl/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "declaration": {
        "end": 49,
        "id": {
          "end": 4,
          "name": "f",
          "start": 3,
          "type": "Identifier"
        },
        "init": {
          "body": {
            "body": [
              {
                "argument": {
                  "arguments": [
                    {
                      "end": 41,
                      "name": "angle",
                      "start": 36,
                      "type": "Identifier",
                      "type": "Identifier"
                    },
                    {
                      "end": 46,
                      "raw": "360",
                      "start": 43,
                      "type": "Literal",
                      "type": "Literal",
                      "value": 360.0
                    }
                  ],
                  "callee": {
                    "end": 35,
                    "name": "default",
                    "start": 28,
                    "type": "Identifier"
                  },
                  "end": 47,
                  "start": 28,
                  "type": "CallExpression",
                  "type": "CallExpression"
                },
                "end": 47,
                "start": 21,
                "type": "ReturnStatement",
                "type": "ReturnStatement"
              }
            ],
            "end": 49,
            "start": 19
          },
          "end": 49,
          "params": [
            {
              "type": "Parameter",
              "identifier": {
                "end": 13,
                "name": "angle",
                "start": 8,
                "type": "Identifier"
              },
              "default_value": {
                "type": "KclNone",
                "type": "KclNone",
                "__private": "KCL_NONE_ID"
              }
            }
          ],
          "start": 7,
          "type": "FunctionExpression",
          "type": "FunctionExpression"
        },
        "start": 3,
        "type": "VariableDeclarator"
      },
      "end": 49,
      "kind": "fn",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 49,
  "start": 0
}
