src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__aw.snap
---
source: kcl/src/parsing/parser.rs
assertion_line: 4007
expression: actual
snapshot_kind: text
---
{
  "body": [
    {
      "declarations": [
        {
          "end": 91,
          "id": {
            "end": 11,
            "name": "numbers",
            "start": 4,
            "type": "Identifier"
          },
          "init": {
            "elements": [
              {
                "end": 29,
                "raw": "1",
                "start": 28,
                "type": "Literal",
                "type": "Literal",
                "value": 1.0
              },
              {
                "end": 80,
                "raw": "3",
                "start": 79,
                "type": "Literal",
                "type": "Literal",
                "value": 3.0
              }
            ],
            "end": 91,
            "nonCodeMeta": {
              "nonCodeNodes": {
                "1": [
                  {
                    "end": 48,
                    "start": 43,
                    "type": "NonCodeNode",
                    "value": {
                      "type": "blockComment",
                      "value": "A,",
                      "style": "line"
                    }
                  }
                ],
                "2": [
                  {
                    "end": 66,
                    "start": 61,
                    "type": "NonCodeNode",
                    "value": {
                      "type": "blockComment",
                      "value": "B,",
                      "style": "line"
                    }
                  }
                ]
              },
              "startNodes": []
            },
            "start": 14,
            "type": "ArrayExpression",
            "type": "ArrayExpression"
          },
          "start": 4,
          "type": "VariableDeclarator"
        }
      ],
      "end": 91,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 91,
  "start": 0
}
