src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__az.snap
---
source: kcl/src/parsing/parser.rs
assertion_line: 4033
expression: actual
snapshot_kind: text
---
{
  "body": [
    {
      "declarations": [
        {
          "end": 79,
          "id": {
            "end": 9,
            "name": "props",
            "start": 4,
            "type": "Identifier"
          },
          "init": {
            "end": 79,
            "nonCodeMeta": {
              "nonCodeNodes": {
                "1": [
                  {
                    "end": 52,
                    "start": 44,
                    "type": "NonCodeNode",
                    "value": {
                      "type": "blockComment",
                      "value": "b: 2,",
                      "style": "line"
                    }
                  }
                ]
              },
              "startNodes": []
            },
            "properties": [
              {
                "end": 30,
                "key": {
                  "end": 27,
                  "name": "a",
                  "start": 26,
                  "type": "Identifier"
                },
                "start": 26,
                "type": "ObjectProperty",
                "value": {
                  "end": 30,
                  "raw": "1",
                  "start": 29,
                  "type": "Literal",
                  "type": "Literal",
                  "value": 1.0
                }
              },
              {
                "end": 69,
                "key": {
                  "end": 66,
                  "name": "c",
                  "start": 65,
                  "type": "Identifier"
                },
                "start": 65,
                "type": "ObjectProperty",
                "value": {
                  "end": 69,
                  "raw": "3",
                  "start": 68,
                  "type": "Literal",
                  "type": "Literal",
                  "value": 3.0
                }
              }
            ],
            "start": 12,
            "type": "ObjectExpression",
            "type": "ObjectExpression"
          },
          "start": 4,
          "type": "VariableDeclarator"
        }
      ],
      "end": 79,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 79,
  "start": 0
}
